[gd_scene load_steps=2 format=2]

[ext_resource path="res://Objects/InteractArea.gd" type="Script" id=1]

[node name="InteractArea" type="Area"]
script = ExtResource( 1 )

[node name="InteractSpot" type="Position3D" parent="."]

[node name="DialogueSpot" type="Position3D" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Area_mouse_exited"]
